--- a/FinalProject/app/src/main/res/values/strings.xml
+++ b/FinalProject/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Dreams</string>
-    <string name="title_home">Home</string>
+    <string name="title_home">Sleep</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_notifications">Notifications</string>
+    <string name="title_notifications">Profile</string>
 </resources>
