--- a/April17_1/mobile/src/main/res/values/strings.xml
+++ b/April17_1/mobile/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_home">Sleep</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Profile</string>
+    <string name="action_settings">Settings</string>
 </resources>
